[gd_scene load_steps=2 format=3 uid="uid://bius0ofgpw8m5"]

[ext_resource type="Script" uid="uid://dhalbdpooexrp" path="res://scripts/HammerMinigame.gd" id="1"]

[node name="HammerMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -622.0
offset_bottom = -268.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="TrackLine" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -6.0
offset_right = 141.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.4, 0.4, 1)

[node name="ImpactZone" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 121.0
offset_top = -33.0
offset_right = 141.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.2, 0.2, 0.5)

[node name="NoteContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 126.0
offset_top = 183.0
offset_right = 126.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -155.0
offset_top = 324.0
offset_right = -25.0
offset_bottom = 358.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Puntos: 0"
horizontal_alignment = 2

[node name="ProgressLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Progreso: 0/5"
